--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,10 @@
     text-decoration: none;
     color: black;
 }
-
 #navdiv3{
     display: flex;
     gap: 40px;
 }
-
 #navdiv3 img{
     height: 25px;
     width: 25px;
@@ -60,7 +58,6 @@
     position: relative;
 
 }
-
 #bannerdiv1{
     width: 35%;
     height: 40vh;
@@ -74,10 +71,8 @@
     justify-content: center;
     z-index: 4;
 }
-
 #bannerdiv1 h1, #bannerdiv1 p{
     max-width: 220px;
-    
 }
 #bannerdiv1 h1{
     font-size: 2em;
@@ -780,11 +775,6 @@
     width: 50%;
     height: 60%;
 }
-
-
-
-
-
 #feature2{
     width: 50%;
     height: 60%;
@@ -813,14 +803,11 @@
     width: 100%;
 
 }
-
-
 .content{
     width: 100%;
     height: 33.3%;
     display: flex;
 }
-
 .insidecontenthead{
     height: 100%;
     width: 15%;
@@ -828,12 +815,10 @@
     flex-direction: column;
     align-items: center;
 }
-
 .roundnumber p{
     text-align: center;
     height: 50px;
-    width: 50px;
-    
+    width: 50px;   
     background-color: var(--primary-color);
     border-radius: 100px;
     display: flex;
@@ -849,17 +834,12 @@
     margin: 10px;
 
 }
-
-
-
-
 .insidecontentbody{
     height: 100%;
     width: 85%;
     display: flex;
     flex-direction: column;
-
-    
+  
 }
 
 .insidecontentbody h3{
@@ -867,25 +847,13 @@
     height: 50px;
     width: 50px;
     display: flex;
-    align-items: center;
-    
-    
+    align-items: center; 
 }
-
-.insidecontentbody p{
-    
+.insidecontentbody p{   
     max-width: 80%;
-    color: var(--primary-color);
-    
-    
+    color: var(--primary-color); 
 }
-
-
 }
-
-
-
-
 @media (min-width:900px) and (max-width:1100px){
     .marginLeft{
         margin-left: 0px;
@@ -899,19 +867,16 @@
    #emptybox{
     display: none;
    }
-
    .downarrow{
     display: none;
    }
    #bannerdiv3{
     display: none;
    }
-
    #livingroom{
     width: 100%;
     height: 400px;
 }
-
    .section1{
     display: flex;
     flex-direction: column;
@@ -933,7 +898,6 @@
    #bannerdiv1 p {
     padding-bottom: 20px;
    }
-
    .section2{
     height: 100vh;
    }
@@ -945,7 +909,6 @@
    .h1heading{
     max-width: 77%;
 }
-
    .info{
     display: flex;
     flex-direction: column;
@@ -976,8 +939,7 @@
     }
     .section3{
         flex-direction: column;
-        height: 700px;
-        
+        height: 700px;   
     }
     #about1{
         height: 50%;
@@ -986,20 +948,17 @@
         justify-content: center;
         align-items: center;
     }
-
     .section4{
         display: flex;
         flex-direction: column;
         height: 1000px;
     }
-
     #feature1{
         width: 80%;
         height: 50%;
         justify-content: center;
         margin-top: 60px;
     }
-
     #feature2{
         width: 50%;
         height: 40%;
@@ -1009,7 +968,6 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
-
     #reviewheading{
         width: 100%;
         height: 20%;
@@ -1017,13 +975,10 @@
         justify-content: space-around;
         align-items: center;
     }
-    
-    
     #reviewheading h2 {
         font-size: 40px;
         max-width: 100%;
     }
-
     #reviewcontent{
         width: 100%;
         height: 80%;
@@ -1032,13 +987,6 @@
         gap: 20px;
         align-items: center;
     }
-
-    /* .reviewinsidecontent i {
-        font-size: 90px;
-        margin-left: 50px;
-        margin-top: 20px;
-    } */
-
     .userid {
         margin-bottom: 2%;
         margin-top: 4%;
@@ -1049,20 +997,15 @@
         background-color: var(--primary-color);
         border-radius: 2px;
     }
-
     .reviewinsidecontent i{
      margin-top: 4%;   
     }
-
     .reviewinsidecontent p {
         margin-top: 4%;
     }
-
-    .reviewinsidecontent h3 {
-        
+    .reviewinsidecontent h3 {    
         margin-top: 4%;
     }
-
     #reviewinsidecontent1{
         margin-left: 0;
     }
@@ -1073,8 +1016,6 @@
         height: 1000px;
     }
 }
-
-
 @media (min-width:700px) and (max-width:900px){
     .marginLeft{
         margin-left: 0px;
@@ -1088,19 +1029,16 @@
    #emptybox{
     display: none;
    }
-
    .downarrow{
     display: none;
    }
    #bannerdiv3{
     display: none;
    }
-
    #livingroom{
     width: 100%;
     height: 400px;
 }
-
    .section1{
     display: flex;
     flex-direction: column;
@@ -1122,7 +1060,6 @@
    #bannerdiv1 p {
     padding-bottom: 20px;
    }
-
    .section2{
     height: 100vh;
    }
@@ -1134,7 +1071,6 @@
    .h1heading{
     max-width: 77%;
 }
-
    .info{
     display: flex;
     flex-direction: column;
@@ -1165,8 +1101,7 @@
     }
     .section3{
         flex-direction: column;
-        height: 700px;
-        
+        height: 700px;  
     }
     #about1{
         height: 50%;
@@ -1175,7 +1110,6 @@
         justify-content: center;
         align-items: center;
     }
-
     .section4{
         display: flex;
         flex-direction: column;
@@ -1188,7 +1122,6 @@
         justify-content: center;
         margin-top: 60px;
     }
-
     #feature2{
         width: 50%;
         height: 40%;
@@ -1198,7 +1131,6 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
-
     #reviewheading{
         width: 100%;
         height: 20%;
@@ -1206,13 +1138,10 @@
         justify-content: space-around;
         align-items: center;
     }
-    
-    
     #reviewheading h2 {
         font-size: 40px;
         max-width: 100%;
     }
-
     #reviewcontent{
         width: 100%;
         height: 80%;
@@ -1221,13 +1150,6 @@
         gap: 20px;
         align-items: center;
     }
-
-    /* .reviewinsidecontent i {
-        font-size: 90px;
-        margin-left: 50px;
-        margin-top: 20px;
-    } */
-
     .userid {
         margin-bottom: 2%;
         margin-top: 4%;
@@ -1238,20 +1160,16 @@
         background-color: var(--primary-color);
         border-radius: 2px;
     }
-
     .reviewinsidecontent i{
      margin-top: 4%;   
     }
-
     .reviewinsidecontent p {
         margin-top: 4%;
     }
-
     .reviewinsidecontent h3 {
         
         margin-top: 4%;
     }
-
     #reviewinsidecontent1{
         margin-left: 0;
     }
@@ -1262,8 +1180,6 @@
         height: 1000px;
     }
 }
-
-
 @media (min-width:500px) and (max-width:700px){
     .marginLeft{
         margin-left: 0px;
@@ -1277,19 +1193,16 @@
    #emptybox{
     display: none;
    }
-
    .downarrow{
     display: none;
    }
    #bannerdiv3{
     display: none;
    }
-
    #livingroom{
     width: 100%;
     height: 400px;
 }
-
    .section1{
     display: flex;
     flex-direction: column;
@@ -1311,7 +1224,6 @@
    #bannerdiv1 p {
     padding-bottom: 20px;
    }
-
    .section2{
     height: 100vh;
    }
@@ -1323,7 +1235,6 @@
    .h1heading{
     max-width: 77%;
 }
-
    .info{
     display: flex;
     flex-direction: column;
@@ -1354,8 +1265,7 @@
     }
     .section3{
         flex-direction: column;
-        height: 700px;
-        
+        height: 700px;  
     }
     #about1{
         height: 50%;
@@ -1364,20 +1274,17 @@
         justify-content: center;
         align-items: center;
     }
-
     .section4{
         display: flex;
         flex-direction: column;
         height: 1000px;
     }
-
     #feature1{
         width: 80%;
         height: 50%;
         justify-content: center;
         margin-top: 60px;
     }
-
     #feature2{
         width: 50%;
         height: 40%;
@@ -1387,7 +1294,6 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
-
     #reviewheading{
         width: 100%;
         height: 20%;
@@ -1395,13 +1301,10 @@
         justify-content: space-around;
         align-items: center;
     }
-    
-    
     #reviewheading h2 {
         font-size: 40px;
         max-width: 100%;
     }
-
     #reviewcontent{
         width: 100%;
         height: 80%;
@@ -1410,13 +1313,6 @@
         gap: 20px;
         align-items: center;
     }
-
-    /* .reviewinsidecontent i {
-        font-size: 90px;
-        margin-left: 50px;
-        margin-top: 20px;
-    } */
-
     .userid {
         margin-bottom: 2%;
         margin-top: 4%;
@@ -1427,20 +1323,16 @@
         background-color: var(--primary-color);
         border-radius: 2px;
     }
-
     .reviewinsidecontent i{
      margin-top: 4%;   
     }
-
     .reviewinsidecontent p {
         margin-top: 4%;
     }
-
     .reviewinsidecontent h3 {
         
         margin-top: 4%;
     }
-
     #reviewinsidecontent1{
         margin-left: 0;
     }
@@ -1451,21 +1343,7 @@
         height: 1000px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (min-width:300px) and (max-width:500px){
+@media (min-width:300px) and (max-width:700px){
     .marginLeft{
         margin-left: 0px;
     }
@@ -1482,55 +1360,33 @@
     .subscribebtn {
         width: 250px;
     }
-
     #footer2{
         flex-direction: column;
         height: 1100px;
     }
-
-    .navdivul{
-        
+    .navdivul{ 
         gap: 10px;
-        
     }
     .reviewsubheadingarrow{
         display: none;
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     #footerdetail1 {
         text-align: center;
         padding-right: 0;
     }
-        
    #emptybox{
     display: none;
    }
-
    .downarrow{
     display: none;
    }
    #bannerdiv3{
     display: none;
    }
-
    #livingroom{
     width: 100%;
     height: 200px;
 }
-
    .section1{
     display: flex;
     flex-direction: column;
@@ -1550,16 +1406,14 @@
     max-width: 500px;
     text-align: center;
    }
-
    #bannerdiv1 h1{
     padding-top: 15px;
-    font-size: 1.6em;
+    font-size: 1.3em;
    }
    #bannerdiv1 p {
     padding-bottom: 20px;
     font-size: .8em;
 }
-
    .section2{
     height: 500px;
    }
@@ -1567,13 +1421,14 @@
         height: 10%;
         display: flex;
         justify-content: center;
-    
-   }
+    }
    .h1heading{
     max-width: 77%;
     font-size: 1.5em;
 }
-
+    .numberdetail p{
+        font-size: .7em;
+    }
    .info{
     display: flex;
     flex-direction: column;
@@ -1604,7 +1459,6 @@
     .section3{
         flex-direction: column;
         height: 700px;
-        
     }
     #about1{
         height: 40%;
@@ -1613,43 +1467,34 @@
         justify-content: center;
         align-items: center;
     }
-    
     #about2 {
         height: 60%;
-        width: 90%;
-        
+        width: 90%; 
     }
-    
     #aboutdetail1 {
         height: 20%;
     }
-
     #about1 img {
         height: 80%;
         width: 60%;
     }
-
     #aboutdetail1 h2 {
         font-size: 1.5em;
     }
-
     #aboutdetail2 p {
         font-size: .8em;
     }
-
     .section4{
         display: flex;
         flex-direction: column;
         height: 1000px;
     }
-
     #feature1{
         width: 80%;
         height: 50%;
         justify-content: center;
         margin-top: 60px;
     }
-
     #feature2{
         width: 50%;
         height: 40%;
@@ -1659,21 +1504,18 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
-
     #reviewheading{
         width: 100%;
-        height: 20%;
+        height: 10%;
         display: flex;
         justify-content: space-around;
         align-items: center;
-    }
-    
+    }    
     
     #reviewheading h2 {
-        font-size: 40px;
+        font-size: 20px;
         max-width: 100%;
     }
-
     #reviewcontent{
         width: 100%;
         height: 80%;
@@ -1681,8 +1523,7 @@
         flex-direction: column;
         gap: 20px;
         align-items: center;
-    }
-    
+    }    
     .userid {
         margin-bottom: 2%;
         margin-top: 4%;
@@ -1692,21 +1533,17 @@
         width: 72%;
         background-color: var(--primary-color);
         border-radius: 2px;
-    }
-    
+    }    
     .reviewinsidecontent i{
      margin-top: 4%;   
     }
-
     .reviewinsidecontent p {
         margin-top: 4%;
-    }
-    
+    }    
     .reviewinsidecontent h3 {
         
         margin-top: 4%;
     }
-
     #reviewinsidecontent1{
         margin-left: 0;
     }
@@ -1720,5 +1557,48 @@
         max-width: 100%;
         font-size: 1.5em;
     }
+    .insidecontentbody h3 {
+        font-size: 1em;
+    }
+    .insidecontentbody p {
+        font-size: 0.7em;
+    }
+    .insidecontentbody {
+        margin-left: 50px;
+    }
+    #feature2 img {
+        width: 249px;
+        height: 350px;
+    }
+    .subscribebtn a {
+        position: relative;
+        right: 27px;
+    }
+    #footer1 h2 {
+        font-size: 2em;
+    }
+    #footer1 p {
+        font-size: 1em;
+    }
+    .section6 {
+        height: 80vh;
+    }
+    #footerdetail2 {
+        margin-top: 10px;
+    }
+    #footerdetail3 {
+        margin-top: 10px;
+    }
+    #footerdetail4 {
+        margin-top: 10px;
+    }
+    #footerdetail1 {
+        margin-top: 30px;
+    }
+    #footerdetail5 {
+        margin-top: 10px;
+    }
+    
+
 }
 
