update after making the page responsive

--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,9 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    height: 15vh;
+    padding: 30px 0px;
     width: 100%;
+    max-height: 130px;
     align-items: center;
 }
 
@@ -70,7 +71,6 @@
 }
 
 .section1 {
-    height: 85vh;
     width: 100%;
     display: flex;
     position: relative;
@@ -78,11 +78,11 @@
 
 #bannertext {
     width: 35%;
-    height: 40vh;
     background-color: var(--primary-color);
     color: white;
     position: absolute;
     top: 25%;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -105,7 +105,8 @@
 }
 
 #bannerimage {
-    height: 80%;
+    background: url(/images/livingroom.jpg)no-repeat center center/cover;
+    height: 500px;
     width: 68%;
     position: relative;
     top: 10%;
@@ -169,7 +170,7 @@
 
 .section2 {
     width: 100%;
-    height: 50vh;
+    margin-top: 20px;
 }
 
 .heading {
@@ -177,6 +178,7 @@
     height: 50%;
     display: flex;
     align-items: center;
+    padding: 20px;
 }
 
 .headingline {
@@ -196,6 +198,7 @@
     width: 80%;
     height: 50%;
     display: flex;
+    padding: 20px;
 }
 
 .infodetail {
@@ -208,7 +211,6 @@
     width: 20%;
     height: 100%;
     display: flex;
-    margin-top: 10%;
 }
 
 .headingtext {
@@ -241,28 +243,25 @@
 
 .section3 {
     width: 100%;
-    height: 100vh;
     display: flex;
 }
 
 #about1 {
-    height: 100%;
     width: 50%;
     display: flex;
     align-items: center;
 }
 
 #about1 img {
-    height: 80%;
     width: 60%;
 }
 
 #about2 {
-    height: 67%;
     width: 60%;
     display: flex;
     flex-direction: column;
-    margin: auto;
+    justify-content: space-evenly;
+
 }
 
 .numberdetail h6,
@@ -271,47 +270,41 @@
 }
 
 #aboutdetail1 {
-    height: 30%;
     display: flex;
     align-items: center;
 }
 
 #aboutdetail1 h2 {
     max-width: 360px;
-    font-size: 5vb;
+    font-size: 2em;
 }
 
 #aboutdetail2 {
-    height: 20%;
     display: flex;
     align-items: center;
 }
 
 #aboutdetail2 p {
     max-width: 520px;
-    font-size: 2.5vb;
+    font-size: 1em;
     color: var(--primary-color);
 }
 
 #aboutdetail3 {
-    height: 40%;
     display: flex;
     align-items: center;
 }
 
 #numberdetail1 {
     width: 33.3%;
-    height: 100%;
 }
 
 #numberdetail2 {
     width: 33.3%;
-    height: 100%;
 }
 
 #numberdetail3 {
     width: 33.3%;
-    height: 100%;
 }
 
 .numberdetail {
@@ -321,12 +314,7 @@
 }
 
 .numberdetail h6 {
-    margin-bottom: 10%;
     font-size: 2em;
-}
-
-#aboutdetail4 {
-    height: 10%;
 }
 
 #aboutdetail4 a {
@@ -349,7 +337,6 @@
 
 .section4 {
     width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -357,12 +344,13 @@
 
 #feature1 {
     width: 50%;
-    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 #feature2 {
     width: 50%;
-    height: 80%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -370,17 +358,17 @@
 
 #feature2 img {
     width: 80%;
-    height: 100%;
+    padding: 30px;
 }
 
 .featureheading {
-    height: 25%;
     width: 100%;
 }
 
 .featureheading h2 {
     max-width: 70%;
-    font-size: 35px;
+    font-size: 2em;
+    padding: 30px 0px;
 }
 
 .featurecontent {
@@ -390,7 +378,7 @@
 
 .content {
     width: 100%;
-    height: 33.3%;
+    padding: 10px 0px;
     display: flex;
 }
 
@@ -415,7 +403,7 @@
 }
 
 .numberline {
-    height: 80%;
+    height: 80px;
     border-left: 1px solid var(--primary-color);
     margin: 10px;
 }
@@ -442,12 +430,11 @@
 
 .section5 {
     width: 100%;
-    height: 100vh;
 }
 
 #reviewheading {
     width: 100%;
-    height: 20%;
+    padding: 20px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -466,14 +453,14 @@
 
 #reviewcontent {
     width: 100%;
-    height: 80%;
+    padding: 20px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .reviewinsidecontent {
-    height: 80%;
+    padding: 20px 0px;
     width: 36%;
     background-color: var(--primary-color);
     border-radius: 2px;
@@ -536,12 +523,11 @@
 
 .section6 {
     width: 100%;
-    height: 60vh;
 }
 
 #footer1 {
     width: 100%;
-    height: 50%;
+    padding: 20px 0px 40px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -669,40 +655,6 @@ footer {
     gap: 30px;
 }
 
-
-@media (min-width:300px) and (max-width:1000px){
-    #bannertext{
-        max-height: 200px;
-    }
-    .section1{
-        max-height: 600px;
-    }
-    .section2{
-        max-height: 600px;
-    }
-    .section3{
-        max-height: 600px;
-    }
-    .section4{
-        max-height: 1000px;
-    }
-    .section5{
-        max-height: 750px;
-    }
-    .section6{
-        max-height: 600px;
-    }
-    .nav{
-        max-height: 100px;
-    }
-    #aboutdetail1 h2{
-        font-size: 2em;
-    }
-    #aboutdetail2 p {
-        font-size: 1em;
-    }
-}
-
 @media (min-width:1000px) and (max-width:1200px) {
 
     #bannertext h1,
@@ -716,7 +668,7 @@ footer {
 
     #bannerimage {
         width: 62%;
-        height: 100%;
+        height: 500px;
     }
 
     #navicons img {
@@ -733,11 +685,6 @@ footer {
     .responsive_menu {
         display: none;
     }
-
-    #bannertext {
-        height: 30vh;
-    }
-
     #bannersideline {
         height: 80%;
         right: 15%;
@@ -756,38 +703,26 @@ footer {
         font-size: 1.8em;
     }
 
-    .downarrow {
-        top: 63%;
-        right: -2;
-    }
-
     #emptybox {
         width: 15%;
         height: 18%;
-        /* position: absolute; */
-        top: 65%;
         left: -2%;
     }
 
     .section3 {
-        gap: 100px;
+        padding: 20px 0px;
     }
 
-    #about1 img {
-        height: 70%;
-    }
 
     #about2 {
-        height: 70%;
         width: 60%;
         display: flex;
         flex-direction: column;
-        margin: auto;
+        justify-content: space-evenly;
     }
 
 
     #aboutdetail1 {
-        height: 30%;
         display: flex;
         align-items: center;
     }
@@ -798,7 +733,6 @@ footer {
     }
 
     #aboutdetail2 {
-        height: 20%;
         display: flex;
         align-items: center;
     }
@@ -809,23 +743,19 @@ footer {
     }
 
     #aboutdetail3 {
-        height: 40%;
         display: flex;
         align-items: center;
     }
 
     #numberdetail1 {
-        width: 33.3%;
         height: 100%;
     }
 
     #numberdetail2 {
-        width: 33.3%;
         height: 100%;
     }
 
     #numberdetail3 {
-        width: 33.3%;
         height: 100%;
     }
 
@@ -866,7 +796,6 @@ footer {
 
     .section4 {
         width: 100%;
-        height: 100vh;
         display: flex;
         align-items: center;
     }
@@ -877,8 +806,8 @@ footer {
     }
 
     #feature2 {
-        width: 50%;
-        height: 70%;
+        width: 60%;
+        height: 500px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -934,7 +863,7 @@ footer {
     }
 
     .numberline {
-        height: 80%;
+        height: 50px;
         border-left: 1px solid var(--primary-color);
         margin: 10px;
 
@@ -1036,7 +965,7 @@ footer {
     }
 
     .section2 {
-        height: 100vh;
+        padding: 20px 0px;
     }
 
     .heading {
@@ -1078,40 +1007,44 @@ footer {
     .insideheading h3 {
         font-size: 1.6em;
     }
-
-    .insidedetail p {
-        font-size: 1.2em;
-    }
-
     .section3 {
         flex-direction: column;
-        height: 700px;
+        align-items: center;
     }
 
     #about1 {
-        height: 50%;
-        width: 100%;
+        width: 50%;
+        padding: 20px 0px;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    #aboutdetail1{
+        padding: 20px 0px;
+    }
+    #aboutdetail2{
+        padding: 20px 0px;
+    }
+    #aboutdetail3{
+        padding: 20px 0px;
+    }
+    #aboutdetail4{
+        padding: 20px 0px;
     }
 
     .section4 {
         display: flex;
         flex-direction: column;
-        height: 1000px;
     }
 
     #feature1 {
         width: 80%;
-        height: 50%;
         justify-content: center;
         margin-top: 60px;
     }
 
     #feature2 {
         width: 50%;
-        height: 40%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1172,9 +1105,11 @@ footer {
     #reviewinsidecontent2 {
         margin-right: 0;
     }
-
-    .section5 {
-        height: 1000px;
+    #footerdetail1{
+        padding-left:15px ;
+    }
+    #footerdetail5{
+        padding-right:15px ;
     }
 }
 @media (min-width:700px) and (max-width:900px) {
@@ -1258,12 +1193,10 @@ footer {
     }
 
     .section2 {
-        height: 100vh;
-        max-height: 500px;
+        padding: 20px 0px;
     }
 
     .heading {
-        height: 25%;
         display: flex;
         justify-content: center;
     }
@@ -1280,7 +1213,6 @@ footer {
         align-items: center;
         width: 100%;
         gap: 20px;
-        height: 75%;
         margin-top: 0px;
     }
 
@@ -1310,33 +1242,44 @@ footer {
 
     .section3 {
         flex-direction: column;
-        height: 700px;
+        align-items: center;
     }
 
     #about1 {
-        height: 50%;
-        width: 100%;
+        width: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
+    #about2{
+        padding: 20px 0px;
+    }
+    #aboutdetail1{
+        padding: 20px 0px;
+    }
+    #aboutdetail2{
+        padding: 20px 0px;
+    }
+    #aboutdetail3{
+        padding: 20px 0px;
+    }
+    #aboutdetail4{
+        padding: 20px 0px;
+    }
+   
     .section4 {
         display: flex;
         flex-direction: column;
-        height: 1000px;
     }
 
     #feature1 {
         width: 80%;
-        height: 50%;
         justify-content: center;
-        margin-top: 60px;
     }
 
     #feature2 {
         width: 50%;
-        height: 40%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1346,7 +1289,6 @@ footer {
 
     #reviewheading {
         width: 100%;
-        height: 20%;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -1397,10 +1339,6 @@ footer {
 
     #reviewinsidecontent2 {
         margin-right: 0;
-    }
-
-    .section5 {
-        height: 1000px;
     }
 }
 
@@ -1485,18 +1423,17 @@ footer {
         display: flex;
         flex-direction: column;
         position: static;
-        height: 75vh;
+        margin-top: 0px;
     }
 
     #bannertext {
-        position: static;
         width: 100%;
     }
 
     #bannerimage {
         position: static;
         width: 100%;
-        height: 350px;
+        height: 450px;
     }
 
     #bannertext h1,
@@ -1517,10 +1454,6 @@ footer {
         font-size: .8em;
         padding-left: 20px;
         padding-right: 20px;
-    }
-
-    .section2 {
-        height: 400px;
     }
 
     .heading {
@@ -1568,6 +1501,7 @@ footer {
 
     .infodetail {
         width: 80%;
+        padding: 10px 0px;
     }
 
     .insideheading h3 {
@@ -1580,19 +1514,17 @@ footer {
 
     .section3 {
         flex-direction: column;
-        height: 500px;
+        align-items: center;
     }
 
     #about1 {
-        height: 40%;
-        width: 100%;
+        width: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
     #about2 {
-        height: 60%;
         width: 90%;
         padding-left: 20px;
         padding-right: 20px;
@@ -1615,8 +1547,7 @@ footer {
     }
 
     #about1 img {
-        height: 80%;
-        width: 60%;
+        width: 250px;
     }
 
     #aboutdetail1 h2 {
@@ -1630,14 +1561,12 @@ footer {
     .section4 {
         display: flex;
         flex-direction: column;
-        height: 850px;
+        padding: 20px 0px;
     }
 
     #feature1 {
         width: 80%;
-        height: 50%;
         justify-content: center;
-        margin-top: 60px;
     }
 
     #feature2 {
@@ -1646,8 +1575,6 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 20px;
-        margin-bottom: 20px;
     }
 
     .featureheading {
@@ -1714,11 +1641,6 @@ footer {
     #reviewinsidecontent2 {
         margin-right: 0;
     }
-
-    .section5 {
-        height: 750px;
-    }
-
     .featureheading h2 {
         max-width: 100%;
         font-size: 1.5em;
@@ -1763,10 +1685,21 @@ footer {
         justify-content: normal;
     }
 
-    .section6 {
-        height: 80vh;
+    #aboutdetail1{
+        padding: 10px 0px;
     }
-
+    #aboutdetail2{
+        padding: 10px 0px;
+    }
+    #aboutdetail3{
+        padding: 10px 0px;
+    }
+    #aboutdetail4{
+        padding: 10px 0px;
+    }
+    #aboutdetail5{
+        padding: 10px 0px;
+    }
     #footerdetail2 {
         margin-top: 10px;
         height: 150px;
@@ -1837,7 +1770,6 @@ footer {
         position: absolute;
         background-color: #f9f9f9;
         min-width: 200px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 100;
         top: 50px;
         padding: 10px;
@@ -1863,11 +1795,6 @@ footer {
     .menu_checkbox:checked~.dropdown_items {
         display: block;
     }
-
-    .close_checkbox:checked~.dropdown_items {
-        display: none;
-    }
-
     .menu_checkbox,
     .close_checkbox {
         visibility: hidden;
@@ -1875,128 +1802,5 @@ footer {
 
     .close_icon {
         visibility: hidden;
-    }
-
-
-
-}
-
-
-@media (min-width:1500px) {
-    .section1 {
-        max-height: 900px;
-    }
-
-    #bannertext {
-        height: 40%;
-    }
-
-    .responsive_menu {
-        display: none;
-    }
-
-    .section2 {
-        max-height: 400px;
-    }
-
-    .insideheading h3 {
-        font-size: 2em;
-    }
-
-    .insidedetail p {
-        font-size: 1.5em;
-        line-height: 30px;
-    }
-
-    .section3 {
-        max-height: 800px;
-    }
-
-    #aboutdetail1 h2 {
-        font-size: 3em;
-    }
-
-    #aboutdetail2 p {
-        font-size: 2em;
-    }
-
-    #aboutdetail3 {
-        height: 25%;
-        max-height: 200px;
-    }
-
-    #about2 {
-        height: 90%;
-        justify-content: center;
-    }
-
-    .section4 {
-        max-height: 900px;
-    }
-
-    .featureheading h2 {
-        font-size: 3em;
-    }
-
-    .roundnumber p {
-        font-size: 1.5em;
-    }
-
-    .insidecontentbody h3 {
-        font-size: 2em;
-    }
-
-    .insidecontentbody p {
-        font-size: 1.5em;
-    }
-
-    .section5 {
-        max-height: 900px;
-    }
-
-    #reviewheading h2 {
-        font-size: 3em;
-        max-width: 100%;
-    }
-
-    .reviewinsidecontent {
-        max-height: 550px;
-    }
-
-    .reviewinsidecontent h3 {
-        font-size: 2em;
-    }
-
-    .reviewinsidecontent p {
-        font-size: 1.5em;
-    }
-
-    .username h4 {
-        font-size: 1.2em;
-    }
-
-    .username p {
-        font-size: .8em;
-    }
-
-    .section6 {
-        max-height: 550px;
-    }
-}
-@media (min-width:500px) and (max-width:700px) {
-    .section5 {
-        height: 690px;
-    }
-
-    .section3 {
-        height: 600px;
-    }
-
-    #about1 {
-        height: 50%;
-    }
-
-    #about2 {
-        height: 40%;
     }
 }
